fix: Fix Vietnamese being cut off on top

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,6 @@
   width: 80vw;
   height: 70vh;
   font-size: 200px;
-  line-height: 1;
   margin-top: 0;
   text-transform: uppercase;
   font-family: 'fk_grotesk_neuethin';
